[package]
name = "text_oxidizer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.3", features = ["derive"] }
csv = "1.2.2"
lazy_static = "1.4.0"
prompted = "0.2.7"
regex = "1.8.3"
